syntax = "proto3";

package daon.analysis.ko;

option java_package = "daon.analysis.ko.proto";
option java_outer_classname = "ModelProtos";
option java_multiple_files = true;


message Model {

    bytes userFst = 1; // fst byte[]
    bytes wordFst = 2; // fst byte[]

    repeated string firstTags = 3;
    repeated string lastTags = 4;
    repeated string middleTags = 5;
    repeated string connectTags = 6;

    map<int32, Keyword> dictionary = 7; // dictionary map

    message Keyword {

        /**
         * 사전 단어 구분 키값
         */
        int32 seq = 1;

        /**
         * 사전 단어
         */
        string word = 2;

        /**
         * 사전 단어 추가 정보
         * POS tag 정보 목록
         */
        string tag = 3;

        /**
         * 사전 단어 사용 빈도
         */
        int64 freq = 4;

        /**
         * 단어 설명
         */
        string desc = 5;
    }
}
